--- a/scss/_medios-de-pago.scss
+++ b/scss/_medios-de-pago.scss
@@ -18,9 +18,9 @@
     justify-content: center;
 }
 .fotosMediosDePago img {
-    width: 100px;
-    height: 100px;
-    margin: 10px;
+    width: 25%;
+    height: 65%;
+    margin: 15px;
 }
 
 .descuento {
@@ -33,7 +33,7 @@
     justify-content: space-around;
     padding: 20px;
     img {
-        width: 14.0625rem;
-        height: 6.25rem;
+        width: 20%;
+        height: 20%;
     }
 }
