--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,21 @@ nav ul li a {
   text-decoration: none;
   color: #ffffff;
 }
+nav ul li a:hover {
+  color: #7a60af;
+  text-decoration: underline;
+}
+nav ul li a:visited {
+  color: purple;
+}
+nav .nav-wrapper {
+  width: 100%;
+  margin: 0;
+  padding: 1rem;
+}
+nav #toggle, nav label {
+  display: none;
+}
 
 main h1 {
   color: #8e7ab5;
@@ -78,6 +93,21 @@ footer {
 
 .tituloCentrado {
   text-align: center;
+}
+
+button {
+  background-color: #e493b3;
+  padding: 5px 10px;
+  border: #e493b3;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+button a {
+  text-decoration: none;
+  color: white;
+}
+button a:hover {
+  color: purple;
 }
 
 .inicio {
@@ -129,6 +159,10 @@ footer {
   height: 80%;
   aspect-ratio: 1/1;
   object-fit: cover;
+}
+.nuestrosUltimosViajes img:hover {
+  transform: scale(1.1);
+  transition: transform 1000ms ease;
 }
 
 .opiniones {
@@ -206,15 +240,12 @@ footer {
   height: 200px;
   margin: 10px 20px;
 }
+.viaje img:hover {
+  transform: scale(1.1);
+  transition: transform 1000ms ease;
+}
 .viaje h3 {
   margin: 30px 0px 30px;
-}
-
-button {
-  background-color: #e493b3;
-  padding: 5px 10px;
-  border: #e493b3;
-  border-radius: 5px;
 }
 
 .mediosDePago {
@@ -238,9 +269,9 @@ button {
 }
 
 .fotosMediosDePago img {
-  width: 100px;
-  height: 100px;
-  margin: 10px;
+  width: 25%;
+  height: 65%;
+  margin: 15px;
 }
 
 .descuento {
@@ -254,8 +285,8 @@ button {
   padding: 20px;
 }
 .bancos img {
-  width: 14.0625rem;
-  height: 6.25rem;
+  width: 20%;
+  height: 20%;
 }
 
 .fondoRosa {
@@ -275,10 +306,11 @@ button {
 }
 .fondoVioleta h2 {
   color: #ffffff;
+  text-align: center;
 }
 .fondoVioleta img {
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
 }
 .fondoVioleta div {
   display: flex;
@@ -294,8 +326,18 @@ form {
 }
 form li {
   margin-bottom: 25px;
+  list-style: none;
 }
 
+@media (max-width: 950px) {
+  .fondoRosa {
+    width: 80%;
+    flex-direction: column;
+  }
+  .fondoVioleta {
+    margin: 20px;
+  }
+}
 @media (max-width: 850px) {
   .quienesSomos {
     flex-direction: column;
@@ -319,8 +361,23 @@ form li {
     height: 15%;
     font-size: 1rem;
   }
+  nav .menu {
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    top: 0;
+  }
   nav ul {
     flex-direction: column;
+    align-items: center;
+    padding: 0.5rem;
+  }
+  nav label {
+    display: inline-flex;
+    cursor: pointer;
+  }
+  nav #toggle:checked ~ .menu {
+    height: 100%;
   }
   .inicio {
     align-items: flex-start;
@@ -342,13 +399,46 @@ form li {
     font-size: 1rem;
   }
 }
+@media (max-width: 500px) {
+  .fondoRosa {
+    padding: 20px;
+  }
+  .fondoVioleta h4 {
+    font-size: 0.75rem;
+  }
+  .fondoVioleta img {
+    width: 20px;
+    height: 20px;
+  }
+  .fondoVioleta form {
+    font-size: 0.75rem;
+  }
+}
+@media (max-width: 420px) {
+  .nuestrosUltimosViajes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .nuestrosUltimosViajes img {
+    width: 60%;
+    height: 60%;
+    margin: 10px;
+  }
+  .fondoRosa {
+    padding: 10px;
+  }
+  .fondoVioleta h4 {
+    font-size: 0.625rem;
+  }
+  .fondoVioleta form {
+    font-size: 0.625rem;
+  }
+}
 @media (max-width: 325px) {
   header {
-    height: 12%;
-    font-size: 0.9375rem;
-  }
-  nav ul {
-    flex-direction: column;
+    width: 100%;
+    height: 5%;
   }
   .inicio {
     padding-top: 10px;
@@ -359,20 +449,11 @@ form li {
   h2 {
     font-size: 1rem;
   }
-  .opiniones p {
-    font-size: 0.75rem;
-  }
   footer {
     font-size: 0.9375rem;
   }
   .quienesSomos {
     flex-direction: column;
-  }
-  .quienesSomos h1 {
-    font-size: 1.25rem;
-  }
-  .quienesSomos p {
-    font-size: 0.75rem;
   }
 }
 
