--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -13,10 +13,11 @@
     border-radius: 10px;
     h2 {
         color: #ffffff;
+        text-align: center;
     }
     img {
-        width: 40px;
-        height: 40px;
+        width: 35px;
+        height: 35px;
     }
     div {
         display: flex;
@@ -32,5 +33,6 @@ form {
     padding: 20px;
     li {
         margin-bottom: 25px;
+        list-style: none;
     }
 }
