--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -4,25 +4,26 @@
     box-sizing: border-box;
   }
   
-  body {
+body {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
     font-family: "Jacques Francois", serif;
-  }
-  
-  header {
-    color: #ffffff;
-    font-size: 1.25rem;
-    font-weight: bold;
-    background-color: #e493b3;
-    height: 5%;
-    width: 100%;
-  }
+}
 
-  nav ul {
+header {
+  color: #ffffff;
+  font-size: 1.25rem;
+  font-weight: bold;
+  background-color: #e493b3;
+  height: 5%;
+  width: 100%;
+}
+
+  nav {
+    ul {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -32,6 +33,22 @@
       text-decoration: none;
       color: #ffffff;
     }
+    li a:hover{
+      color: #7a60af;
+      text-decoration: underline;
+    }
+    li a:visited{
+      color: purple;
+    }
+  }
+  .nav-wrapper{
+    width: 100%;
+    margin: 0;
+    padding: 1rem;
+  }
+  #toggle, label{
+    display: none;
+  }
   }
 
   main {
@@ -80,4 +97,19 @@ footer {
 
 .tituloCentrado {
   text-align: center;
+}
+
+button {
+  background-color: #e493b3;
+  padding: 5px 10px;
+  border: #e493b3;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  a{
+      text-decoration: none;
+      color: white;
+  }
+  a:hover{
+      color: purple;
+  }
 }
