--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -43,6 +43,10 @@
         aspect-ratio: 1/1;
         object-fit: cover;
     }
+    img:hover{
+        transform: scale(1.1);
+        transition: transform 1000ms ease;
+    }
 }
 
 .opiniones {
