--- a/scss/_nuestros-viajes.scss
+++ b/scss/_nuestros-viajes.scss
@@ -6,14 +6,11 @@
         height: 200px;
         margin: 10px 20px;
     }
+    img:hover{
+        transform: scale(1.1);
+        transition: transform 1000ms ease;
+    }
     h3 {
         margin: 30px 0px 30px;
     }
-}
-
-button {
-    background-color: #e493b3;
-    padding: 5px 10px;
-    border: #e493b3;
-    border-radius: 5px;
 }
