--- a/scss/_quienes-somos.scss
+++ b/scss/_quienes-somos.scss
@@ -6,8 +6,10 @@
         margin-top: 10px;
     }
     img {
+        width: 100%;
         margin-top: 50px;
         margin-right: 50px;
+        aspect-ratio: 1/1;
     }
 }
 
