--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -38,10 +38,11 @@
     "destino1 destino2 destino3"
     "destino4 destino5 destino6";
     img {
-        width: 80%;
+        width: 100%;
         height: 80%;
         aspect-ratio: 1/1;
         object-fit: cover;
+        padding: 5%;
     }
     img:hover{
         transform: scale(1.1);
