--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -74,6 +74,10 @@
       justify-content: center;
       padding: 2%;
     }
+    .mediosDePago{
+      display: flex;
+      flex-direction: column;
+    }
     footer {
       font-size: 1rem;
     }
@@ -135,10 +139,35 @@
     h2 {
       font-size: 1rem;
     }
-    footer {
-      font-size: .9375rem;
-    }
     .quienesSomos {
       flex-direction: column;
+    }
+    .mediosDePago{
+      margin: 5%;
+      img{
+        width: 100%;
+        aspect-ratio: 1/1;
+        object-fit: contain;
+      }
+      .fotosTarjetasDeCreditoYDebito{
+        flex-direction: column;
+      }
+      .fotosEfectivo{
+        flex-direction: column;
+      }
+      .fotosTransferencia{
+        flex-direction: column;
+      }
+    }
+    .bancos{
+      flex-direction: column;
+      img{
+        width: 100%;
+        object-fit: contain;
+        margin: 5%;
+      }
+    }
+    footer {
+      font-size: .9375rem;
     }
 }
