--- a/scss/_nuestros-viajes.scss
+++ b/scss/_nuestros-viajes.scss
@@ -2,9 +2,9 @@
     display: flex;
     margin-top: 40px;
     img {
-        width: 250px;
-        height: 200px;
-        margin: 10px 20px;
+        width: 100%;
+        height: 60%;
+        padding: 5%;
     }
     img:hover{
         transform: scale(1.1);
