--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,5 +1,4 @@
 .inicio {
-    font-size: 2.5rem;
     display: flex;
     justify-content: right;
     align-items: center;
@@ -43,10 +42,10 @@
         aspect-ratio: 1/1;
         object-fit: cover;
         padding: 5%;
-    }
-    img:hover{
-        transform: scale(1.1);
-        transition: transform 1000ms ease;
+        &:hover{
+            transform: scale(1.1);
+            transition: transform 1000ms ease;
+        }
     }
 }
 
@@ -54,12 +53,14 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    div p {
-        color: #8e7ab5;
+    div {
+        p {
+        color: map-get($colores, opiniones);
         background-color: #d3a9aa;
         padding: 5px;
         border-radius: 5px;
         margin: 10px;
         width: 95%;
+    }
     }
 }
