--- a/scss/_medios-de-pago.scss
+++ b/scss/_medios-de-pago.scss
@@ -34,9 +34,7 @@
         object-fit: contain;
     }
     .fotosEfectivo{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        @extend .fotosTarjetasDeCreditoYDebito;
     }
 }
 
@@ -50,9 +48,7 @@
         object-fit: contain;
     }
     .fotosTransferencia{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        @extend .fotosTarjetasDeCreditoYDebito;
     }
 }
 
@@ -61,9 +57,7 @@
 }
 
 .bancos {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    @extend .fotosTarjetasDeCreditoYDebito;
     img {
         width: 30%;
         height: 30%;
