--- a/scss/_nuestros-viajes.scss
+++ b/scss/_nuestros-viajes.scss
@@ -1,14 +1,14 @@
 .viaje {
     display: flex;
-    margin-top: 40px;
+    margin-top: 20px;
     img {
-        width: 100%;
-        height: 60%;
-        padding: 5%;
-    }
-    img:hover{
-        transform: scale(1.1);
-        transition: transform 1000ms ease;
+        width: 90%;
+        aspect-ratio: 1/1;
+        margin: 2%;
+        &:hover{
+            transform: scale(1.1);
+            transition: transform 1000ms ease;
+        }
     }
     h3 {
         margin: 30px 0px 30px;
